--- a/package.json
+++ b/package.json
@@ -11,15 +11,23 @@
   "dependencies": {
     "@barba/core": "^2.9.7",
     "@next/font": "^13.0.1",
+    "@nextui-org/react": "^1.0.0-beta.11",
     "@react-spring/web": "^9.6.1",
     "bootstrap-icons": "^1.10.2",
     "flubber": "^0.4.2",
     "framer-motion": "^8.0.1",
+    "gsap": "^3.11.4",
+    "hamburger-react": "^2.5.0",
+    "keen-slider": "^6.8.5",
     "next": "13.0.1",
     "popmotion": "^11.0.5",
     "react": "18.2.0",
+    "react-burger-menu": "^3.0.9",
     "react-dom": "18.2.0",
-    "react-spring": "^9.5.5"
+    "react-slick": "^0.29.0",
+    "react-spring": "^9.5.5",
+    "slick-carousel": "^1.8.1",
+    "three": "^0.148.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
