--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "18.2.0",
     "react-burger-menu": "^3.0.9",
     "react-dom": "18.2.0",
+    "react-parallax-tilt": "^1.7.84",
     "react-slick": "^0.29.0",
     "react-spring": "^9.5.5",
     "slick-carousel": "^1.8.1",
