started building components for literature pages

--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "@next/font": "^13.0.1",
     "@nextui-org/react": "^1.0.0-beta.11",
     "@react-spring/web": "^9.6.1",
-    "apollo-boost": "^0.4.9",
     "bootstrap-icons": "^1.10.2",
     "dotenv": "^16.0.3",
     "flubber": "^0.4.2",
@@ -23,10 +22,10 @@
     "gsap": "^3.11.4",
     "hamburger-react": "^2.5.0",
     "keen-slider": "^6.8.5",
+    "lodash": "^4.17.21",
     "next": "13.0.1",
     "popmotion": "^11.0.5",
     "react": "18.2.0",
-    "react-apollo": "^3.1.5",
     "react-burger-menu": "^3.0.9",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
